--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,17 @@
             <artifactId>aesh</artifactId>
             <version>0.56.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.1</version>
+        </dependency>
     </dependencies>
-
     <build>
         <plugins>
 
